Fix overflow

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -58,6 +58,7 @@ a{
 }
 .hero{
     height: 100%;
+    overflow: hidden;
     .large-container{
         background-color: $primary;
         height: 80vh;
